--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
     "react": "^18.3.1",
